register / login / logout implemented
