# middlewares/db/models/User.js
@@ -1,39 +1,68 @@
-module.exports = (mongoose) => {
-    const bcrypt = require('bcrypt');
-    const saltRounds = 10;
+const mongoose = require('mongoose');
+const bcrypt = require('bcrypt');
+const validator = require('validator');
+const jwt = require('jsonwebtoken');
+const saltRounds = 10;
 
-    const userSchema = new mongoose.Schema({
-        username: {
-            type: String,
-            required: true,
-            unique: true,
+const UserSchema = new mongoose.Schema({
+    email: {
+        type: String,
+        required: true,
+        unique: true,
+        lowercase: true,
+        validate: (value) => {
+            if (!validator.isEmail(value)) {
+                throw new Error({ error: 'Invalid Email address' });
+            }
         },
-        password: String,
-    });
+    },
+    password: {
+        type: String,
+        require: true,
+    },
+    tokens: [
+        {
+            token: {
+                type: String,
+                required: true,
+            },
+        },
+    ],
+});
 
-    userSchema.methods = {
-        matchPassword: (password) => bcrypt.compare(password, this.password),
-    };
+UserSchema.pre('save', async function (next) {
+    // Hash the password before saving the user model
+    const user = this;
+    if (user.isModified('password')) {
+        user.password = await bcrypt.hash(user.password, saltRounds);
+    }
+    next();
+});
 
-    userSchema.pre('save', function (next) {
-        if (this.isModified('password')) {
-            bcrypt.genSalt(saltRounds, (err, salt) => {
-                if (err) {
-                    next(err);
-                    return;
-                }
-                bcrypt.hash(this.password, salt, (err, hash) => {
-                    if (err) {
-                        next(err);
-                        return;
-                    }
-                    this.password = hash;
-                    next();
-                });
-            });
-            return;
-        }
-        next();
+UserSchema.methods.generateAuthToken = async function () {
+    // Generate an auth token for the user
+    const user = this;
+    const token = jwt.sign({ _id: user._id }, process.env.JWT_SECRET, {
+        expiresIn: '10h',
     });
-    mongoose.model('User', userSchema);
+    user.tokens = user.tokens.concat({ token });
+    await user.save();
+    return token;
 };
+
+UserSchema.statics.findByCredentials = async (email, password) => {
+    // Search for a user by email and password.
+    const user = await User.findOne({ email });
+    if (!user) {
+        throw new Error({ error: 'Invalid login credentials' });
+    }
+    const isPasswordMatch = await bcrypt.compare(password, user.password);
+    if (!isPasswordMatch) {
+        throw new Error('Invalid login credentials');
+    }
+    return user;
+};
+
+const User = mongoose.model('User', UserSchema);
+
+module.exports = User;
