# swagger.json
@@ -13,8 +13,8 @@
             "url": "http://www.apache.org/licenses/LICENSE-2.0.html"
         }
     },
-    "host": "localhost:2020",
-    "basePath": "/api",
+    "host": "localhost:2020/",
+    "basePath": "/",
     "tags": [
         {
             "name": "movie",
@@ -198,13 +198,13 @@
                 }
             }
         },
-        "api/user": {
+        "api/auth/register": {
             "post": {
                 "tags": ["user"],
                 "summary": "Create user",
                 "description": "This can only be done by the logged in user.",
                 "operationId": "createUser",
-                "produces": ["application/xml", "application/json"],
+                "produces": ["application/json", "application/xml"],
                 "parameters": [
                     {
                         "in": "body",
@@ -223,9 +223,57 @@
                 }
             }
         },
-
-        "api/user/logout": {
-            "get": {
+        "api/auth/login": {
+            "post": {
+                "tags": ["user"],
+                "summary": "Logs user into the system",
+                "description": "Signing in the user",
+                "produces": ["application/json", "application/xml"],
+                "parameters": [
+                    {
+                        "name": "body",
+                        "in": "body",
+                        "description": "The user name for login",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/User"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "successful operation",
+                        "schema": {
+                            "type": "string"
+                        },
+                        "headers": {
+                            "X-Rate-Limit": {
+                                "type": "integer",
+                                "format": "int32",
+                                "description": "calls per hour allowed by the user"
+                            },
+                            "X-Expires-After": {
+                                "type": "string",
+                                "format": "date-time",
+                                "description": "date in UTC when token expires"
+                            }
+                        }
+                    },
+                    "400": {
+                        "description": "Invalid username/password supplied",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "$ref": "#/definitions/Error"
+                                }
+                            }
+                        }
+                    }
+                }
+            }
+        },
+        "api/auth/logout": {
+            "post": {
                 "tags": ["user"],
                 "summary": "Logs out current logged in user session",
                 "description": "",
@@ -328,48 +376,8 @@
                 }
             }
         },
-        "api/auth/login": {
-            "post": {
-                "tags": ["user"],
-                "summary": "Logs user into the system",
-                "description": "",
-                "produces": ["application/xml", "application/json"],
-                "parameters": [
-                    {
-                        "name": "body",
-                        "in": "body",
-                        "description": "The user name for login",
-                        "required": true,
-                        "type": "object"
-                    }
-                ],
-                "responses": {
-                    "200": {
-                        "description": "successful operation",
-                        "schema": {
-                            "type": "string"
-                        },
-                        "headers": {
-                            "X-Rate-Limit": {
-                                "type": "integer",
-                                "format": "int32",
-                                "description": "calls per hour allowed by the user"
-                            },
-                            "X-Expires-After": {
-                                "type": "string",
-                                "format": "date-time",
-                                "description": "date in UTC when token expires"
-                            }
-                        }
-                    },
-                    "400": {
-                        "description": "Invalid username/password supplied"
-                    }
-                }
-            }
-        },
 
-        "/api/auth/verify": {
+        "api/auth/verify": {
             "get": {
                 "tags": ["user"],
                 "summary": "Verify token",
@@ -420,36 +428,28 @@
         "User": {
             "type": "object",
             "properties": {
-                "id": {
-                    "type": "integer",
-                    "format": "int64"
-                },
-                "username": {
-                    "type": "string"
-                },
-                "firstName": {
-                    "type": "string"
-                },
-                "lastName": {
-                    "type": "string"
-                },
                 "email": {
                     "type": "string"
                 },
+
                 "password": {
                     "type": "string"
-                },
-                "phone": {
-                    "type": "string"
-                },
-                "userStatus": {
-                    "type": "integer",
-                    "format": "int32",
-                    "description": "User Status"
                 }
             },
             "xml": {
                 "name": "User"
+            }
+        },
+
+        "Error": {
+            "type": "object",
+            "properties": {
+                "code": {
+                    "type": "string"
+                },
+                "message": {
+                    "type": "string"
+                }
             }
         },
 
